release: prepare v1.2.4